--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <h1>YES, RICO KABOOM!!</h1>
 <body id="fundo">
 <input id="cor1" type="color" value="#FF0000" oninput="setGradient()">
+
+<input id="cor2" type="color" value="#77ff11" oninput="setGradient()">
+</body>
