--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
+<html>
 <h1>YES, RICO KABOOM!!</h1>
 <link rel = "stylesheet" href "bg.css">
 <body id="fundo">
 <input id="cor1" type="color" value="#FF0000" oninput="setGradient()">
 <input id="cor2" type="color" value="#77ff11" oninput="setGradient()">
 </body>
+  </html>
